--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -3,7 +3,7 @@
   <!-- Columna izquierda con imagen -->
   <div class=" h-screen">
     <img
-      src="../../../assets/images/pexels-mantasink.jpg"
+      src="../../../assets/images/LumoLoginVeritcal.png"
       alt="Login image"
       class="w-full h-full object-cover"
     />
@@ -14,7 +14,7 @@
     <div class="bg-white p-10 m-3 rounded-lg shadow-xl w-full max-w-md shadow-sm shadow-cyan-500">
       <div class="w-full items-center flex justify-center mb-5" >
         <img
-        src="../../../assets/images/likecell.png"
+        src="../../../assets/images/{{this.imageLogin}}"
         alt="Login image"
         class="w-full sm:w-[15vw] h-[10vh] object-cover"
       />
