Optimización final y correccón de errores

--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -23,10 +23,10 @@
     max-width: 800px;
     margin: 50px auto;
     padding: 20px;
-    border: 1px solid #ddd;
+    /* border: 1px solid #ddd;
     border-radius: 8px;
     background-color: #f9f9f9;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); */
   }
 
   .register-container h2 {
@@ -36,8 +36,8 @@
 
   .form-register{
     display: grid;
-    grid-template-columns: repeat(2, 1fr); /* Dos columnas de igual tamaño */
-    gap: 20px; /* Espacio entre columnas y filas */
+    grid-template-columns: repeat(2, 1fr); 
+    gap: 20px; 
   }
 
   .form-group-reg{
