--- a/src/app/components/invoices/invoices.component.html
+++ b/src/app/components/invoices/invoices.component.html
@@ -1,14 +1,7 @@
 <div class="container mx-auto p-4 w-full h-full">
   <div class="main-content h-full" [class.menu-open]="isMenuOpen">
-    <!-- Mensaje cuando no hay productos -->
-    <div class="emptyContent text-center" *ngIf="content == true">
-      <h1 class="text-2xl font-bold mb-2">
-        Aún no tienes productos para facturar
-      </h1>
-    </div>
-
     <!-- Contenedor de productos -->
-    <div class="products-container h-full" *ngIf="content == false">
+    <div class="products-container h-full">
       <!-- Barra de búsqueda -->
       <div class="relative mb-4 search-container">
         <input
